--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,94 +1,300 @@
 {%- assign text_direction = 'localization.text_direction_trigger' | t | downcase -%}
 <!doctype html>
-<html class="no-js" lang="{{ request.locale.iso_code }}" dir="{{ text_direction }}">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="theme-color" content="{{ settings.color_button_background }}">
-  <link rel="canonical" href="{{ canonical_url }}">
-  <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
-  {% # theme-check-disable RemoteAsset %}
-  <link rel="dns-prefetch" href="https://productreviews.shopifycdn.com">
-  <link rel="dns-prefetch" href="https://ajax.googleapis.com">
-  <link rel="dns-prefetch" href="https://maps.googleapis.com">
-  <link rel="dns-prefetch" href="https://maps.gstatic.com">
-  {% # theme-check-enable RemoteAsset %}
+<html
+  class="no-js"
+  lang="{{ request.locale.iso_code }}"
+  dir="{{ text_direction }}">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="{{ settings.color_button_background }}">
+    <link rel="canonical" href="{{ canonical_url }}">
+    <link
+      rel="preconnect"
+      href="https://cdn.shopify.com"
+      crossorigin>
+    <link
+      rel="preconnect"
+      href="https://fonts.shopifycdn.com"
+      crossorigin>
+      {% # theme-check-disable RemoteAsset %}
+    <link rel="dns-prefetch" href="https://productreviews.shopifycdn.com">
+    <link rel="dns-prefetch" href="https://ajax.googleapis.com">
+    <link rel="dns-prefetch" href="https://maps.googleapis.com">
+    <link rel="dns-prefetch" href="https://maps.gstatic.com">
+    {% # theme-check-enable RemoteAsset %}
 
-  {%- if settings.favicon != blank -%}
-    <link rel="shortcut icon" href="{{ settings.favicon | image_url: width: 32, height: 32 }}" type="image/png" />
-  {%- endif -%}
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+          })(window,document,'script','dataLayer','GTM-54C88XW');
+    </script>
+    <!-- End Google Tag Manager -->
 
-  <title>
-    {{- page_title -}}
-    {%- if current_tags -%}
-      {%- assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags -}}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNN8H8BZ87"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+          
+      gtag('config', 'G-RNN8H8BZ87');
+    </script>
+    <!-- End Google tag (gtag.js) -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125633507-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-125633507-1');
+    </script>
+    <!-- End Google tag (gtag.js) -->
+
+    {%- if settings.favicon != blank -%}
+      <link
+        rel="shortcut icon"
+        href="{{ settings.favicon | image_url: width: 32, height: 32 }}"
+        type="image/png" />
     {%- endif -%}
-    {%- if current_page != 1 %} &ndash; {{ 'general.meta.page' | t: page: current_page }}{% endif -%}
-    {%- if template == 'password' -%}
-      {{- shop.name -}}
-    {%- else -%}
-      {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
+
+    <title>
+      {{- page_title -}}
+      {%- if current_tags -%}
+        {%- assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags -}}
+      {%- endif -%}
+      {%- if current_page != 1 %}
+        &ndash; {{ 'general.meta.page' | t: page: current_page }}{% endif -%}
+      {%- if template == 'password' -%}
+        {{- shop.name -}}
+      {%- else -%}
+        {%- unless page_title contains shop.name %}
+          &ndash; {{ shop.name }}{% endunless -%}
+      {%- endif -%}
+    </title>
+
+    {%- if page_description -%}
+      <meta name="description" content="{{ page_description | escape }}">
     {%- endif -%}
-  </title>
 
-  {%- if page_description -%}
-    <meta name="description" content="{{ page_description | escape }}">
-  {%- endif -%}
+    {%- liquid
+      render 'social-meta-tags'
 
-  {%- liquid
-    render 'social-meta-tags'
-    
-    render 'css-variables'
-    echo 'theme.css' | asset_url | stylesheet_tag: preload: true
-    
-    if text_direction == 'rtl'
-      echo 'rtl.css' | asset_url | stylesheet_tag: preload: true
-    endif
-  -%}
+      render 'css-variables'
+      echo 'theme.css' | asset_url | stylesheet_tag: preload: true
 
-  <link rel="stylesheet" href="{{ 'apps.css' | asset_url }}" media="print" fetchpriority="low" onload="this.media='all'">
+      if text_direction == 'rtl'
+        echo 'rtl.css' | asset_url | stylesheet_tag: preload: true
+      endif
+    -%}
 
-  {{ content_for_header }}
+    <link
+      rel="stylesheet"
+      href="{{ 'apps.css' | asset_url }}"
+      media="print"
+      fetchpriority="low"
+      onload="this.media='all'">
 
-  <script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script>
-  <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
+      <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="oHcjDeK0C41s_VrC3ba0oVR1HNliL9Ah9Kgmk3nWM2M" />
+    <!-- End Google Site Verification -->
 
-  {%- if request.page_type contains 'customers/' -%}
-    <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
-  {%- endif -%}
+    <!-- Theme Settings -->
+    <script>
+        document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+
+        window.theme = window.theme || {};
+        theme.routes = {
+          home: "{{ routes.root_url }}",
+          cart: "{{ routes.cart_url | append: '.js' }}",
+          cartPage: "{{ routes.cart_url }}",
+          cartAdd: "{{ routes.cart_add_url | append: '.js' }}",
+          cartChange: "{{ routes.cart_change_url | append: '.js' }}",
+          search: "{{ routes.search_url }}"
+        };
+        theme.strings = {
+          soldOut: {{ 'products.product.sold_out' | t | json }},
+          unavailable: {{ 'products.product.unavailable' | t | json }},
+          inStockLabel: {{ 'products.product.in_stock_label' | t | json }},
+          stockLabel: {{ 'products.product.stock_label' | t: count: '[count]' | json }},
+          willNotShipUntil: {{ 'products.product.will_not_ship_until' | t: date: '[date]' | json }},
+          willBeInStockAfter: {{ 'products.product.will_be_in_stock_after' | t: date: '[date]' | json }},
+          waitingForStock: {{ 'products.product.waiting_for_stock' | t | json }},
+          savePrice: {{ 'products.general.save_html' | t: saved_amount: '[saved_amount]' | json }},
+          cartEmpty: {{ 'cart.general.empty' | t | json }},
+          cartTermsConfirmation: {{ 'cart.general.terms_confirm' | t | json }},
+          searchCollections: {{ 'general.search.collections' | t | json }},
+          searchPages: {{ 'general.search.pages' | t | json }},
+          searchArticles: {{ 'general.search.articles' | t | json }}
+        };
+        theme.settings = {
+          dynamicVariantsEnable: true,
+          cartType: {{ settings.cart_type | json }},
+          isCustomerTemplate: {% if request.page_type contains 'customers/' %}true{% else %}false{% endif %},
+          moneyFormat: {{ shop.money_format | json }},
+          saveType: {{ settings.product_save_type | json }},
+          productImageSize: {{ settings.product_grid_image_size | json }},
+          productImageCover: {{ settings.product_grid_image_fill }},
+          predictiveSearch: {{ settings.predictive_search_enabled }},
+          predictiveSearchType: {{ settings.search_type | json }},
+          quickView: {{ settings.quick_shop_enable }},
+          themeName: 'Impulse',
+          themeVersion: "6.1.0"
+        };
+  </script>
+    <!-- End Theme Settings -->
+
+    {{ content_for_header }}
+
+    <script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
+
+    {%- if request.page_type contains 'customers/' -%}
+      <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
+    {%- endif -%}
 
   {%- render 'js-variables' -%}
-</head>
 
-<body class="template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if request.path == '/challenge' %} template-challange{% endif %}{% if request.design_mode %} shopify-design-mode{% endif %}" data-rounded-button="{{ settings.rounded_button }}" data-rounded-input="{{ settings.rounded_input }}" data-rounded-block="{{ settings.rounded_block }}" data-button_hover="{{ settings.buttons_hover }}"{% if settings.enable_lazy_image %} data-lazy-image{% endif %} data-title-animation data-page-rendering>
-  <a class="sr-only skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
+    <!-- JSON Schema -->
+    {%- render 'json-ld' -%}
+    <!-- End JSON Schema -->
 
-  {%- liquid
-    if settings.enable_page_transition
-      render 'loading-bar'
-    endif
-    
-    render 'mouse-cursor'
+    <!-- SEO & Schema Management -->
+    {%- if collection.handle == 'cd-players' -%}
+      {%- include 'cd-player-schema' -%}
+    {%- endif -%}
+    {%- if collection.handle == 'bookshelf-speakers' -%}
+      {%- include 'bookshelf-speaker-schema' -%}
+    {%- endif -%}
+    {% if product.tags contains 'Ex-Display' %}
+      <meta name="robots" content="noindex">
+    {% endif %}
+    {% assign do_not_index = "bluetooth-speakers,voice-compatible-speakers,wireless-audio,speaker,projector-mounts,accessories-for-heos,accessories-for-sonos,bluray-players,dynavox-turntable-accessories,garrott-brothers-cartridges-styli,power-cables,simple-setup-add-ons,icing-on-the-cake,choose-your-cable,current-best-sellers,vinyl-various,fyne-f3xx-sale,totem-sale,22-off-eofy-2022,hifi-collective-tax-sale-inclusions,the-simple-setup-speakers,the-simple-setup-turntables,the-classic-setup-amplifiers,the-classic-setup-speakers,the-classic-setup-turntables, 25-off-sale, more, featured-collection, mothers-day-gift-guide-2023, warner, coming-soon" | split: ',' %}
+    {% if collection and do_not_index contains collection.handle %}
+      <meta name="robots" content="noindex" />
+    {% endif %}
+    {% if handle contains 'turntable-hub' %}
+      <meta name="robots" content="noindex">
+    {% endif %}
+    {% if template contains 'search' %}
+      <meta name="robots" content="noindex">
+    {% endif %}
+  <!-- End SEO & Schema Management -->
 
-    sections 'header-group'
-    sections 'overlay-group'
-  -%}
+  </head>
 
-  <div class="page-container" id="PageContainer">
-    <main class="main-content relative" id="MainContent" role="main">
-      {{ content_for_layout }}
-    </main>
+  <body
+    class="template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if request.path == '/challenge' %} template-challange{% endif %}{% if request.design_mode %} shopify-design-mode{% endif %}"
+    data-rounded-button="{{ settings.rounded_button }}"
+    data-rounded-input="{{ settings.rounded_input }}"
+    data-rounded-block="{{ settings.rounded_block }}"
+    data-button_hover="{{ settings.buttons_hover }}"
+    {% if settings.enable_lazy_image %}
+    data-lazy-image{% endif %}
+    data-title-animation
+    data-page-rendering>
 
-    <footer-group class="footer-group block w-full">
-      {%- sections 'footer-group' -%}
-    </footer-group>
-  </div>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-54C88XW"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-  <ul hidden>
-    <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
-    <li id="a11y-new-window-message">{{ 'general.accessibility.link_messages.new_window' | t }}</li>
-  </ul>
-</body>
+    <a class="sr-only skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
+
+    {%- liquid
+      if settings.enable_page_transition
+        render 'loading-bar'
+      endif
+
+      render 'mouse-cursor'
+
+      sections 'header-group'
+      sections 'overlay-group'
+    -%}
+
+    <div class="page-container" id="PageContainer">
+      <main
+        class="main-content relative"
+        id="MainContent"
+        role="main">
+        {{ content_for_layout }}
+      </main>
+
+      <footer-group class="footer-group block w-full">
+        {%- sections 'footer-group' -%}
+      </footer-group>
+    </div>
+
+    <ul hidden>
+      <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
+      <li id="a11y-new-window-message">{{ 'general.accessibility.link_messages.new_window' | t }}</li>
+    </ul>
+  </body>
 </html>
+
+<!-- Begin Shopify-Afterpay JavaScript Snippet (v1.1.1) -->
+{% if cart.currency.iso_code == shop.currency %}
+  <script type="text/javascript">
+      // Overrides:
+      // var afterpay_min = 0.04;       // As per your Afterpay contract.
+      // var afterpay_max = 2000.00;    // As per your Afterpay contract.
+      // var afterpay_msg_size = 'md';  // Can be 'xs', 'sm', 'md' or 'lg'.
+      // var afterpay_logo_theme = 'colour';  // Can be 'colour', 'black' or 'white'.
+      // var afterpay_modal_open_icon = true;
+      // var afterpay_hide_upper_limit = false;
+      // var afterpay_hide_lower_limit = true;
+      // var afterpay_show_if_outside_limits = true;
+      // var afterpay_cbt_enabled = false;
+      
+      // var afterpay_product_integration_enabled = true;
+      // var afterpay_product_selector = '#product-price-selector';
+      // var afterpay_variable_price_fallback = false;
+      // var afterpay_variable_price_fallback_selector = '';
+      // var afterpay_variable_price_fallback_method = 'mutation';  // Can be 'mutation' or 'interval'.
+      
+      // var afterpay_cart_integration_enabled = true;
+      // var afterpay_cart_static_selector = '#cart-subtotal-selector';
+      // var afterpay_variable_subtotal_fallback = false;
+      // var afterpay_variable_subtotal_fallback_selector = '';
+      // var afterpay_variable_subtotal_fallback_method = 'mutation'; // Can be 'mutation' or 'interval'.
+      // var afterpay_cart_dynamic_integration_enabled = false;
+      
+      // var afterpay_footer_logo_enabled = true;
+      // var afterpay_footer_logo_format = 'icon';  // Can be 'icon', 'stacked' or 'logo'.
+      // var afterpay_footer_logo_theme = 'colour'; // Can be 'colour', 'black' or 'white'.
+      // var afterpay_footer_logo_background = 'border';  // Can be 'border' or 'transparent'.
+      // var afterpay_footer_logo_container = 'footer ul.payment-icons';
+      // var afterpay_footer_logo_template = '<li class="payment-icon"><object data="{logo_path}" type="image/svg+xml"></object></li>';
+      
+      // Non-editable fields:
+      var afterpay_js_language = {{ localization.language.iso_code | json }};
+      var afterpay_js_country = {{ localization.country.iso_code | json }};
+      var afterpay_shop_currency = {{ shop.currency | json }};
+      var afterpay_cart_currency = {{ cart.currency.iso_code | json }};
+      var afterpay_shop_money_format = {{ shop.money_format | json }};
+      var afterpay_shop_permanent_domain = {{ shop.permanent_domain | json }};
+      var afterpay_theme_name = {{ theme.name | json }};
+      var afterpay_product = {{ product | json }};
+      var afterpay_current_variant = {{ product.selected_or_first_available_variant | json }};
+      var afterpay_cart_total_price = {{ cart.total_price | json }};
+      var afterpay_js_snippet_version = '1.1.1';
+  </script>
+  <script
+    type="text/javascript"
+    src="https://static.afterpay.com/shopify-afterpay-javascript.js"
+    defer="defer"></script>
+{% else %}
+  <!-- Afterpay disabled: {{ cart.currency.iso_code }} != {{ shop.currency }} -->
+{% endif %}
+<!-- End Shopify-Afterpay JavaScript Snippet (v1.1.1) -->
